# glyph

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  main.cpp
cmake/: CompilerFlags.cmake  Dependencies.cmake
include/: cpu_features.hpp  types.hpp
include/collection/: collection.hpp  registry.hpp  segment.hpp
include/distance/: dispatch.hpp  kernel.hpp  metric.hpp
include/hnsw/: config.hpp  graph.hpp  layer.hpp
include/metadata/: filter.hpp  value.hpp
include/persistence/: engine.hpp
include/quantization/: pq.hpp  sq8.hpp
include/server/: grpc_service.hpp  handler.hpp  http_service.hpp  logger.hpp  metrics.hpp  web_assets.hpp
include/wal/: log.hpp  record.hpp
proto/: glyph.proto
src/: CMakeLists.txt  main.cpp
src/collection/: collection.cpp  registry.cpp  segment.cpp
src/distance/: avx2.cpp  dispatch.cpp  neon.cpp  scalar.cpp
src/hnsw/: graph.cpp
src/metadata/: filter.cpp
src/persistence/: engine.cpp
src/quantization/: pq.cpp  sq8.cpp
src/server/: grpc_service.cpp  handler.cpp  http_service.cpp  logger.cpp
src/wal/: log.cpp
tests/: CMakeLists.txt
tests/collection/: test_advanced_filters.cpp  test_collection.cpp  test_registry.cpp
tests/distance/: test_dispatch.cpp  test_scalar.cpp
tests/hnsw/: test_graph.cpp  test_graph_quantized.cpp
tests/persistence/: test_compaction.cpp  test_engine.cpp  test_segmented_storage.cpp
tests/quantization/: test_pq.cpp  test_sq8.cpp
tests/server/: test_grpc.cpp  test_http.cpp  test_metrics.cpp
tests/wal/: test_wal.cpp
